--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "db-popup-on-visit",
   "version": "0.1.0",
@@ -8,5 +7,8 @@
     "grunt": "~0.4.5",
     "grunt-wp-i18n": "~0.5.0",
     "grunt-wp-readme-to-markdown": "~1.0.0"
+  },
+  "dependencies": {
+    "micromodal": "^0.3.2"
   }
 }
